<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlatPriceCalc">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#1750E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:src="@drawable/arrow1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/calc"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="480dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="41dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <Spinner
        android:id="@+id/spinner"
            android:layout_width="343dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/smooth_corners_10px"
            android:backgroundTint="@color/white"
            />

        <EditText
            android:id="@+id/measurements"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@drawable/smooth_corners_10px"
            android:backgroundTint="@color/white"
            android:hint="@string/measurments"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/calculate"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/smooth_corners_10px"
            android:backgroundTint="@color/button"
            android:text="@string/calculate"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/result"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/smooth_corners_10px"
            android:backgroundTint="@color/white"
            android:text="@string/result"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>